// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Bucket: Grid renders correctly with all props 1`] = `
<div
  className="b-grid "
  style={
    Object {
      "--grid-col-l": "1fr 1fr",
      "--grid-col-m": "1fr 1fr",
      "--grid-col-s": "1fr 1fr",
      "--grid-col-xl": "1fr 1fr",
      "--grid-gap-l": "var(--gutter-medium)",
      "--grid-gap-m": "var(--gutter-medium)",
      "--grid-gap-s": "var(--gutter-medium)",
      "--grid-gap-xl": "var(--gutter-medium)",
    }
  }
>
  <div>
    col 1
  </div>
  <div>
    col 2
  </div>
</div>
`;

exports[`Bucket: Grid renders correctly without any props 1`] = `
<div
  className="b-grid "
  style={
    Object {
      "--grid-col-l": undefined,
      "--grid-col-m": undefined,
      "--grid-col-s": undefined,
      "--grid-col-xl": undefined,
      "--grid-gap-l": undefined,
      "--grid-gap-m": undefined,
      "--grid-gap-s": undefined,
      "--grid-gap-xl": undefined,
    }
  }
>
  <div>
    col 1
  </div>
  <div>
    col 2
  </div>
</div>
`;
